--- a/.github/workflows/publish-action.yml
+++ b/.github/workflows/publish-action.yml
@@ -1,4 +1,4 @@
-name: publish-action
+name: "Publish GitHub Action"
 
 on:
   push:
@@ -8,9 +8,10 @@ on:
       - "*"
 
 jobs:
-  release:
-    name: Release GitHub Actions
+  publish:
     runs-on: ubuntu-latest
     steps:
-      - name: Release GitHub Actions
-        uses: technote-space/release-github-actions@v4
+    - uses: actions/checkout@v1
+    - uses: TG908/publish-github-action@v1
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
