--- a/.github/workflows/codacy-coverage-reporter.yml
+++ b/.github/workflows/codacy-coverage-reporter.yml
@@ -1,6 +1,6 @@
 name: codacy-coverage-reporter
 
-on: ["push"]
+on: ['push']
 
 jobs:
   codacy-coverage-reporter:
@@ -12,3 +12,4 @@ jobs:
         uses: codacy/codacy-coverage-reporter-action@master
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          report-file: ./cobertura.xml
