--- a/action.yml
+++ b/action.yml
@@ -34,7 +34,7 @@ runs:
         echo "OWNER_NAME=$(echo $GITHUB_REPOSITORY | cut -d '/' -f 1)" >> $GITHUB_ENV
         echo "REPOSITORY_NAME=$(echo $GITHUB_REPOSITORY | cut -d '/' -f 2)" >> $GITHUB_ENV
         #latest stable 
-        echo "CODACY_REPORTER_VERSION=$(if [ -n "${{ inputs.coverage-reporter-version }}" ]; then CODACY_REPORTER_VERSION="${{ inputs.coverage-reporter-version }}"; else CODACY_REPORTER_VERSION="13.13.15" fi)" >> $GITHUB_ENV
+        echo "CODACY_REPORTER_VERSION=$(if [ -n "${{ inputs.coverage-reporter-version }}" ]; then CODACY_REPORTER_VERSION="${{ inputs.coverage-reporter-version }}"; else CODACY_REPORTER_VERSION="13.13.15"; fi)" >> $GITHUB_ENV
     - name: "Run coverage-reporter"
       shell: bash
       run: |
