--- a/action.yml
+++ b/action.yml
@@ -33,7 +33,7 @@ runs:
         echo "ORGANIZATION_PROVIDER=$(if [[ $GITHUB_SERVER_URL == "https://github.com" ]]; then echo "gh"; else echo "ghe"; fi)" >> $GITHUB_ENV
         echo "OWNER_NAME=$(echo $GITHUB_REPOSITORY | cut -d '/' -f 1)" >> $GITHUB_ENV
         echo "REPOSITORY_NAME=$(echo $GITHUB_REPOSITORY | cut -d '/' -f 2)" >> $GITHUB_ENV
-        echo "CODACY_REPORTER_VERSION=$(if [ -n "${{ inputs.coverage-reporter-version }}" ]; then CODACY_REPORTER_VERSION="${{ inputs.coverage-reporter-version }}"; else CODACY_REPORTER_VERSION="13.13.15"; fi)" >> $GITHUB_ENV
+        echo "CODACY_REPORTER_VERSION=$(if [ -n "${{ inputs.coverage-reporter-version }}" ]; then echo "${{ inputs.coverage-reporter-version }}"; else echo "13.13.15"; fi)" >> $GITHUB_ENV
     - name: "Run coverage-reporter"
       shell: bash
       run: |
@@ -62,6 +62,6 @@ runs:
          
         echo "$CODACY_REPORTER_VERSION" 
         echo "$ORGANIZATION_PROVIDER"
-        
+
         bash <(curl -Ls https://raw.githubusercontent.com/codacy/codacy-coverage-reporter/$CODACY_REPORTER_VERSION/get.sh) report $lang $force_parser $auth $params --partial &&\
         bash <(curl -Ls https://raw.githubusercontent.com/codacy/codacy-coverage-reporter/$CODACY_REPORTER_VERSION/get.sh) final $auth
