Added a welcome message to allow users to know they're using our action

--- a/action.yml
+++ b/action.yml
@@ -38,6 +38,8 @@ runs:
     - name: "Run coverage-reporter"
       shell: bash
       run: |
+        echo "Welcome to Coverage-Reporter-Action"
+        
         set -eux
 
         report_list=''
